[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gamma-space-model"
version = "0.1.0"
description = "Gamma-structured state-space blocks with stable discretization and full-sequence execution"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "StarMists"}
]
keywords = ["ssm", "state-space-models", "hippo", "sequence-modeling", "gamma-space-model"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=1.12.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "build",
    "wheel",
    "black",
    "isort",
    "flake8",
    "mypy",
]
notebook = [
    "matplotlib>=3.6",
    "pandas>=1.5",
    "jupyter>=1.0",
    "torchvision>=0.13",
]
performance = [
    "triton>=2.0.0;platform_system!='Windows'",
]

[project.urls]
Homepage = "https://github.com/StarMists/GammaSpaceModel"
Documentation = "https://github.com/StarMists/GammaSpaceModel#readme"
Repository = "https://github.com/StarMists/GammaSpaceModel.git"
Issues = "https://github.com/StarMists/GammaSpaceModel/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["gamma_space_model*", "csrc*"]
exclude = [
    "benchmarks*",
    "examples*",
    "output*",
    "scripts*",
    "tests*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
